--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "angular-nest-todo",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "14.12.0"
+  },
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
-    "start": "ng serve",
+    "start": "node dist/apps/api/main",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
@@ -25,7 +28,10 @@
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "start:fe": "ng serve todo",
+    "start:be": "ng serve api",
+    "dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS\" -c=\"green,blue\" \"npm run start:fe\" \"npm run start:be\""
   },
   "private": true,
   "dependencies": {
@@ -40,6 +46,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/serve-static": "^2.1.4",
     "@nrwl/angular": "11.6.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
@@ -70,6 +77,7 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
+    "concurrently": "^6.0.0",
     "cypress": "^6.0.1",
     "dotenv": "8.2.0",
     "eslint": "7.10.0",
